# jango_project

./: README.md  pyproject.toml
entity/app1/: views.py
entity/entity/: asgi.py  settings.py  urls.py  wsgi.py
