[tool.poetry]
name = "workspace"
version = "0.1.0"
description = ""
authors = ["Zorain <zoniseith@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.11"
djangorestframework = "^3.15.1"
psycopg = {extras = ["binary"], version = "^3.1.18"}
drf-spectacular = "^0.27.1"
django-admin-interface = "^0.28.6"
environs = {extras = ["django"], version = "^11.0.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
